[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "fnos-tunnel"
version = "1.0.0"
description = "fnOS Cloudflare Tunnel SDK for Python"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "fnOS", email = "hello@fnos.dev"}
]
keywords = ["fnos", "cloudflare", "tunnel", "sdk"]
urls = {Repository = "https://github.com/dustink66/fnos-tunnel-sdk-python"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25",
]

[tool.setuptools.packages.find]
include = ["fnos_tunnel*"]