[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "fnos-tunnel"
version = "1.0.1"
description = "fnOS Cloudflare Tunnel SDK for Python"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "尘墨成", email = "dustink66@qq.com"}
]
keywords = ["fnos", "cloudflare", "tunnel", "sdk"]
urls = {Repository = "https://github.com/dustink66/fnos-tunnel-sdk-python", Homepage = "https://fnosp.dustinky.com/products/tunnel/"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25",
]

[tool.setuptools.packages.find]
include = ["fnos_tunnel*"]